[gd_scene load_steps=8 format=1]

[ext_resource path="res://scripts/gamemenu.gd" type="Script" id=1]
[ext_resource path="res://sprites/white.png" type="Texture" id=2]
[ext_resource path="res://scripts/vehicle_preview_cam.gd" type="Script" id=3]
[ext_resource path="res://models/cars/orlando/orlando.scn" type="PackedScene" id=4]
[ext_resource path="res://scripts/color_changer.gd" type="Script" id=5]

[sub_resource type="CanvasItemShader" id=1]

_code = { "fragment":"//Source: https://github.com/mattdesl/lwjgl-basics/wiki/ShaderLesson3\n\nuniform color bgColor = color(0.3, 0.3, 0.3, 1);\nuniform color vignetteColor = color(0.3, 0.3, 0.3, 1);\n\n//RADIUS of our vignette, where 0.5 results in a circle fitting the screen\nuniform float RADIUS = 0.75;\n\n//softness of our vignette, between 0.0 and 1.0\nuniform float SOFTNESS = 0.45;\n\n//determine the vector length of the center position\nfloat len = 1.0-length(UV-vec2(0.5));\n\n//use smoothstep to create a smooth vignette\nfloat vignette = smoothstep(RADIUS, RADIUS-SOFTNESS, len);\n\n//apply the vignette with 50% opacity\nvec3 texColor = bgColor.rgb;\n\nCOLOR.rgb = mix(texColor, vignetteColor.rgb, vignette);\nCOLOR.a = bgColor.a;\n", "fragment_ofs":0, "light":"", "light_ofs":0, "vertex":"", "vertex_ofs":0 }

[sub_resource type="CanvasItemMaterial" id=2]

shader/shader = SubResource( 1 )
shader/shading_mode = 0
shader_param/bgColor = Color( 0.109375, 0.109375, 0.109375, 1 )
shader_param/vignetteColor = Color( 0.503906, 0.503906, 0.503906, 1 )
shader_param/RADIUS = 0.75
shader_param/SOFTNESS = 0.8

[node name="gamemenu" type="Control"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 1 )

[node name="bg" type="TextureFrame" parent="."]

material/material = SubResource( 2 )
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 0

[node name="vehicle_preview" type="TextureFrame" parent="."]

editor/display_folded = true
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 60.0
margin/right = 360.0
margin/bottom = 70.0
expand = true
stretch_mode = 0

[node name="vp" type="Viewport" parent="vehicle_preview"]

rect = Rect2( 0, 0, 450, 370 )
own_world = true
world = null
transparent_bg = true
render_target/enabled = true
render_target/v_flip = false
render_target/clear_on_new_frame = true
render_target/filter = true
render_target/gen_mipmaps = true
render_target/update_mode = 2
audio_listener/enable_2d = false
audio_listener/enable_3d = false
physics/object_picking = false
gui/disable_input = false

[node name="sun" type="DirectionalLight" parent="vehicle_preview/vp"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.984808, 0.111619, -0.133022, 0, 0.766044, 0.642788, 0.173648, -0.633022, 0.754406, 0, 0, 0 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 1.0
colors/diffuse = Color( 1, 1, 1, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.05
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
shadow/mode = 0
shadow/max_distance = 0.0
shadow/split_weight = 0.5
shadow/zoffset_scale = 2.0

[node name="camera" type="Spatial" parent="vehicle_preview/vp"]

editor/display_folded = true
_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 3 )

[node name="Camera" type="Camera" parent="vehicle_preview/vp/camera"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 3 )
projection = 0
fov = 60.0
near = 0.1
far = 100.0
keep_aspect = 1
current = true
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="vehicle1" parent="vehicle_preview/vp" instance=ExtResource( 4 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4, 0, 0 )

[node name="vehicle2" parent="vehicle_preview/vp" instance=ExtResource( 4 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 0 )

[node name="panel" type="Panel" parent="."]

visibility/opacity = 0.1
anchor/left = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 310.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0

[node name="navigation" type="Control" parent="."]

editor/display_folded = true
anchor/left = 1
anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 270.0
margin/top = 90.0
margin/right = 40.0
margin/bottom = -120.0

[node name="btnColor" type="Button" parent="navigation"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 230.0
margin/bottom = 50.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Change Color"
flat = false

[node name="btnRace" type="Button" parent="navigation"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 80.0
margin/right = 230.0
margin/bottom = 130.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Race!"
flat = false

[node name="btnReturn" type="Button" parent="navigation"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 160.0
margin/right = 230.0
margin/bottom = 210.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Return"
flat = false

[node name="colorchanger" type="Control" parent="."]

editor/display_folded = true
visibility/visible = false
anchor/left = 1
anchor/top = 3
anchor/right = 1
anchor/bottom = 3
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 270.0
margin/top = 180.0
margin/right = 40.0
margin/bottom = -190.0

[node name="vehicle1" type="Control" parent="colorchanger"]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 230.0
margin/bottom = 100.0
script/script = ExtResource( 5 )
previewColor = NodePath("colorPreview")
sliderR = NodePath("sldR")
sliderG = NodePath("sldG")
sliderB = NodePath("sldB")

[node name="lblTitle" type="Label" parent="colorchanger/vehicle1"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 59.0
margin/bottom = 14.0
text = "Vehicle 1"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="colorPreview" type="ColorFrame" parent="colorchanger/vehicle1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 30.0
margin/right = 60.0
margin/bottom = 90.0
color = Color( 1, 1, 1, 1 )

[node name="sldR" type="HSlider" parent="colorchanger/vehicle1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 30.0
margin/right = 230.0
margin/bottom = 46.0
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="sldG" type="HSlider" parent="colorchanger/vehicle1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 50.0
margin/right = 230.0
margin/bottom = 66.0
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="sldB" type="HSlider" parent="colorchanger/vehicle1"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 70.0
margin/right = 230.0
margin/bottom = 86.0
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="vehicle2" type="Control" parent="colorchanger"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 120.0
margin/right = 230.0
margin/bottom = 220.0
script/script = ExtResource( 5 )
previewColor = NodePath("colorPreview")
sliderR = NodePath("sldR")
sliderG = NodePath("sldG")
sliderB = NodePath("sldB")

[node name="lblTitle" type="Label" parent="colorchanger/vehicle2"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 59.0
margin/bottom = 14.0
text = "Vehicle 2"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="colorPreview" type="ColorFrame" parent="colorchanger/vehicle2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 30.0
margin/right = 60.0
margin/bottom = 90.0
color = Color( 1, 1, 1, 1 )

[node name="sldR" type="HSlider" parent="colorchanger/vehicle2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 30.0
margin/right = 230.0
margin/bottom = 46.0
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="sldG" type="HSlider" parent="colorchanger/vehicle2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 50.0
margin/right = 230.0
margin/bottom = 66.0
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="sldB" type="HSlider" parent="colorchanger/vehicle2"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 80.0
margin/top = 70.0
margin/right = 230.0
margin/bottom = 86.0
range/min = 0.0
range/max = 1.0
range/step = 0.01
range/page = 0.0
range/value = 0.0
range/exp_edit = false
range/rounded = false
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="btnReturn" type="Button" parent="colorchanger"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 60.0
margin/top = 250.0
margin/right = 170.0
margin/bottom = 290.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Return"
flat = false


